Header improvements, banner content and more QOL

--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
         <header>
             <div class="main-heading">
                 <div class="container">
-                    <img id="header-logo" src="img/header-logo.webp" alt="">
+                    <a href="#"><img id="header-logo" src="img/header-logo.webp" alt=""></a>
                     <button id="button-support">SUPPORT</button>
                     <button id="button-contact">CONTACT</button>
-                    <input type="text" name="" id="searchbox">
+                    <input type="text" name="" id="searchbox" placeholder="Search...">
                     <div class="submit-styles">
                         <input type="submit" id="button-search" value=" ">
                         <div class="icon-home nav-icon"></div>
@@ -26,6 +26,13 @@
                 </div>                    
             </div>            
             <!-- Mobile Search bar div  -->
+            <div class="main-searchbar-mobile">
+                <input type="text" name="" id="searchbox" placeholder="Search...">
+                <div class="submit-styles">
+                    <input type="submit" id="button-search" value=" ">
+                    <div class="icon-home nav-icon"></div>
+                </div>
+            </div>
             <nav class="main-nav">
                 <div class="container">
                     <ul class="main-nav-list">
@@ -278,8 +285,9 @@
                     <img src="img/clients/ashcroftlogo_landscape_goldblack_DP60P-small.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Ashcroft Partnership LLP</h3>
+                            <p>Originally founded in 2006 as Ashcroft Anthony, they became Ashcroft Partnership LLP in 2020 and are one of the top chartered accountancy firms in Cambridge, advising entrepreneurs and families.</p>
+                            <button>View our case study</button>
                         </div>
                     </div>
                 </div>
@@ -287,8 +295,8 @@
                     <img src="img/clients/busseys_logo.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Busseys</h3>
+                            <p>One of the UK's leading Ford dealerships.</p>
                         </div>
                     </div>
                 </div>
@@ -296,8 +304,8 @@
                     <img src="img/clients/crane_logo.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Crane Garden Buildings</h3>
+                            <p>Leading manufacturer and supplier of high-end garden rooms, summerhouses, workshops and sheds in the UK.</p>
                         </div>
                     </div>
                 </div>
@@ -305,8 +313,8 @@
                     <img src="img/clients/girl_guides_anglia.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Girl Guiding Anglia</h3>
+                            <p>Girl Guiding Anglia is part of Girlguiding, the UK's leading charity for girls and young women in the UK.                            </p>
                             <button>View our case study</button>
                         </div>
                     </div>
@@ -315,8 +323,9 @@
                     <img src="img/clients/girls_day_school_trust_logob.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>GDST</h3>
+                            <p>The <b>Girls' Day School Trust (GDST)</b> is the UK's leading family of 25 independent girls' schools.                            </p>
+                            <button>View our case study</button>
                         </div>
                     </div>
                 </div>
@@ -324,8 +333,7 @@
                     <img src="img/clients/howespercivallogo.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Howes Percival</h3>
                         </div>
                     </div>
                 </div>
@@ -333,8 +341,9 @@
                     <img src="img/clients/onetravellerlogo_white_figuire.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>One Traveller</h3>
+                            <p>One Traveller, founded in 2007, is a leading provider of solo holidays for over 50s.</p>
+                            <button>View our case study</button>
                         </div>
                     </div>
                 </div>
@@ -342,8 +351,9 @@
                     <img src="img/clients/searles_logo.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Searles Leisure Resort</h3>
+                            <p>Searles Leisure Resort, on the beautiful North Norfolk coast, is an award-winning UK holiday resort for families.</p>
+                            <button>View our case study</button>
                         </div>
                     </div>
                 </div>
@@ -351,8 +361,9 @@
                     <img src="img/clients/sweetzy_logo.webp" alt="">
                     <div class="slideshow-submenu-banner">
                         <div class="slideshow-submenu-content">
-                            <h3>Title</h3>
-                            <p>Text</p>
+                            <h3>Sweetzy</h3>
+                            <p>Sweetzy are an online sweets retailer, based in Wymondham.</p>
+                            <button>View our case study</button>
                         </div>
                     </div>
                 </div>
