--- a/index.html
+++ b/index.html
@@ -39,89 +39,89 @@
                         <li class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">                                    
-                                    <li><a href="#">Bespoke CRM</a></li>
-                                    <li><a href="#">Business Automation</a></li>
-                                    <li><a href="#">Software Integrations</a></li>
-                                    <li><a href="#">Mobile App Development</a></li>
-                                    <li><a href="#">Bespoke Databases</a></li>
-                                    <li><a href="#">Sharepoint Development</a></li>   
-                                    <li><a href="#">Operational Systems</a></li>
-                                    <li><a href="#">Business Central Implementation</a></li>
-                                    <li><a href="#">Internet of Things (IoT) Software</a></li>
-                                    <li><a href="#">Intranet Development</a></li>
-                                    <li><a href="#">Customer Portal Development</a></li>
-                                    <li><a href="#">Reporting Hub</a></li>
-                                    <li><a href="#">SAP S/4HANA Management</a></li>
+                                    <li id="sof1"><a href="#">Bespoke CRM</a></li>
+                                    <li id="sof2"><a href="#">Business Automation</a></li>
+                                    <li id="sof3"><a href="#">Software Integrations</a></li>
+                                    <li id="sof4"><a href="#">Mobile App Development</a></li>
+                                    <li id="sof5"><a href="#">Bespoke Databases</a></li>
+                                    <li id="sof6"><a href="#">Sharepoint Development</a></li>   
+                                    <li id="sof7"><a href="#">Operational Systems</a></li>
+                                    <li id="sof8"><a href="#">Business Central Implementation</a></li>
+                                    <li id="sof9"><a href="#">Internet of Things (IoT) Software</a></li>
+                                    <li id="sof10"><a href="#">Intranet Development</a></li>
+                                    <li id="sof11"><a href="#">Customer Portal Development</a></li>
+                                    <li id="sof12"><a href="#">Reporting Hub</a></li>
+                                    <li id="sof13"><a href="#">SAP S/4HANA Management</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item" id="sup"><a href="#"><small>IT</small>SUPPORT</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">
-                                    <li><a href="#">Managed IT Support</a></li>
-                                    <li><a href="#">Business IT Support</a></li>
-                                    <li><a href="#">Office 365 for Business</a></li>
-                                    <li><a href="#">IT Consultancy</a></li>
-                                    <li><a href="#">Cloud Service Provider</a></li>
-                                    <li><a href="#">Data Backup & Disaster Recovery</a></li>
+                                    <li id="sup1"><a href="#">Managed IT Support</a></li>
+                                    <li id="sup2"><a href="#">Business IT Support</a></li>
+                                    <li id="sup3"><a href="#">Office 365 for Business</a></li>
+                                    <li id="sup4"><a href="#">IT Consultancy</a></li>
+                                    <li id="sup5"><a href="#">Cloud Service Provider</a></li>
+                                    <li id="sup6"><a href="#">Data Backup & Disaster Recovery</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item" id="mar"><a href="#"><small>DIGITAL</small>MARKETING</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">
-                                    <li><a href="#">Search Engine Optimisation (SEO)</a></li>
-                                    <li><a href="#">Pay Per Click Advertising (PPC)</a></li>
-                                    <li><a href="#">Conversion Rate Optimisation (CRO)</a></li>
-                                    <li><a href="#">Email Marketing</a></li>
-                                    <li><a href="#">Social Media Marketing</a></li>
-                                    <li><a href="#">Content Marketing</a></li>
+                                    <li id="mar1"><a href="#">Search Engine Optimisation (SEO)</a></li>
+                                    <li id="mar2"><a href="#">Pay Per Click Advertising (PPC)</a></li>
+                                    <li id="mar3"><a href="#">Conversion Rate Optimisation (CRO)</a></li>
+                                    <li id="mar4"><a href="#">Email Marketing</a></li>
+                                    <li id="mar5"><a href="#">Social Media Marketing</a></li>
+                                    <li id="mar6"><a href="#">Content Marketing</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item" id="ser"><a href="#"><small>TELECOMS</small>SERVICES</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">
-                                    <li><a href="#">Business Mobile</a></li>
-                                    <li><a href="#">Hosted VoIP Provider</a></li>
-                                    <li><a href="#">Business VoIP Systems</a></li>
-                                    <li><a href="#">Business Broadband</a></li>
-                                    <li><a href="#">Leased Lines Provider</a></li>
-                                    <li><a href="#">3CX Systems</a></li>
+                                    <li id="ser1"><a href="#">Business Mobile</a></li>
+                                    <li id="ser2"><a href="#">Hosted VoIP Provider</a></li>
+                                    <li id="ser3"><a href="#">Business VoIP Systems</a></li>
+                                    <li id="ser4"><a href="#">Business Broadband</a></li>
+                                    <li id="ser5"><a href="#">Leased Lines Provider</a></li>
+                                    <li id="ser6"><a href="#">3CX Systems</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item" id="des"><a href="#"><small>WEB</small>DESIGN</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">
-                                    <li><a href="#">Bespoke Website Design</a></li>
-                                    <li><a href="#">eCommerce Website Design</a></li>
-                                    <li><a href="#">Pay Monthly Websites</a></li>
-                                    <li><a href="#">Branding & Design</a></li>
-                                    <li><a href="#">Mobile App Development</a></li>
-                                    <li><a href="#">Web Hosting</a></li>
+                                    <li id="des1"><a href="#">Bespoke Website Design</a></li>
+                                    <li id="des2"><a href="#">eCommerce Website Design</a></li>
+                                    <li id="des3"><a href="#">Pay Monthly Websites</a></li>
+                                    <li id="des4"><a href="#">Branding & Design</a></li>
+                                    <li id="des5"><a href="#">Mobile App Development</a></li>
+                                    <li id="des6"><a href="#">Web Hosting</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item" id="sec"><a href="#"><small>CYBER</small>SECURITY</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">
-                                    <li><a href="#">Cyber Security Assessment</a></li>
-                                    <li><a href="#">Cyber Security Management</a></li>
-                                    <li><a href="#">Cyber Penetration Testing</a></li>
-                                    <li><a href="#">Cyber Essentials Certification</a></li>
-                                    <li><a href="#">PCI Compliance</a></li>
-                                    <li><a href="#">Hacking Prevention</a></li>
+                                    <li id="sec1"><a href="#">Cyber Security Assessment</a></li>
+                                    <li id="sec2"><a href="#">Cyber Security Management</a></li>
+                                    <li id="sec3"><a href="#">Cyber Penetration Testing</a></li>
+                                    <li id="sec4"><a href="#">Cyber Essentials Certification</a></li>
+                                    <li id="sec5"><a href="#">PCI Compliance</a></li>
+                                    <li id="sec6"><a href="#">Hacking Prevention</a></li>
                                 </ul>
                             </div>
                         </li>
                         <li class="nav-item" id="cou"><a href="#"><small>DEVELOPER</small>COURSE</a>
                             <div class="container submenu-banner">
                                 <ul class="submenu-content">
-                                    <li><a href="#">Train For A Career In Tech</a></li>
-                                    <li><a href="#">Skills Bootcamp</a></li>
-                                    <li><a href="#">Scion Scheme Frequently Asked Questions</a></li>
-                                    <li><a href="#">Scion Collaborators</a></li>
+                                    <li id="cou1"><a href="#">Train For A Career In Tech</a></li>
+                                    <li id="cou2"><a href="#">Skills Bootcamp</a></li>
+                                    <li id="cou3"><a href="#">Scion Scheme FAQs</a></li>
+                                    <li id="cou4"><a href="#">Scion Collaborators</a></li>
                                 </ul>
                             </div>
                         </li>
