--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                 <p>Manage Consent</p>
             </div>
             <div class="cookie-popup">
-
+                <!-- Popup goes here :) -->
             </div>
         </div>
 
@@ -272,7 +272,36 @@
 
             <div class="content-welcome">
                 <div class="container">
-
+                    <div class="welcome-section1">
+                        <div class="welcome-section1-content">
+                            <h1>Welcome To Netmatters</h1>
+                            <p><b>Netmatters is a leading Bespoke Software, IT Support, and Digital Marketing company based in the East of England with offices in Cambridge, Wymondham, and Great Yarmouth.</b></p>
+                            <p>We aren't tied into contracts with third-party providers, so you know that our recommendations for your business are based purely with one benefit in mind: to help improve your business with the most appropriate solutions.</p>
+                            <p>We pride ourselves on being an ethical business and have a unique business offering and cost model that ensures you get the most from our relationship in an upfront manner.</p>
+                        </div>
+                        <div class="welcome-section1-buttons">
+                            <button id="welcome-button1">Button 1</button>
+                            <button id="welcome-button2">Button 2</button>
+                        </div>
+                    </div>
+                    <div class="welcome-section2">
+                        <div class="welcome-section2-content">
+                            <h1>What Our Clients Think</h1>
+                            <div class="stars">
+                                <div class="star icon-home"></div>
+                                <div class="star icon-home"></div>
+                                <div class="star icon-home"></div>
+                                <div class="star icon-home"></div>
+                                <div class="star icon-home"></div>
+                            </div>
+                            <p><b><i>Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</i></b></p>
+                            <p>Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
+                        </div>
+                        <div class="welcome-section2-buttons">
+                            <button id="welcome-button3">Button 3</button>
+                            <button id="welcome-button4">Button 4</button>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="content-news">
