Finished welcome page!

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                                 <div class="star icon-home"></div>
                                 <div class="star icon-home"></div>
                             </div>
-                            <p><b><i>Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</i></b></p>
+                            <q>Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</q>
                             <p>Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
                         </div>
                         <div class="welcome-section2-buttons">
