Initial framework of news container

--- a/index.html
+++ b/index.html
@@ -306,7 +306,60 @@
             </div>
             <div class="content-news">
                 <div class="container">
-
+                    <div class="section-heading">
+                        <h1>Latest News</h1>
+                        <h2>View All</h2>
+                    </div>
+                    <div class="content-news-container">
+                        <article class="content-news-article">
+                            <div class="content-news-article_image">
+                                <img src="" alt="">
+                                <p>Label</p>
+                            </div>
+                            <h3>Title</h1>
+                            <p>Content Preview...</p>
+                            <button>Button</button>
+                            <div class="content-news-article_author">
+                                <a href="#"><img src="" alt=""></a>
+                                <div class="content-news-article__author-details">
+                                    <p><b>Posted by ______</b></p>
+                                    <p>ddth mmmm yyyy</p>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="content-news-article">
+                            <div class="content-news-article_image">
+                                <img src="" alt="">
+                                <p>Label</p>
+                            </div>
+                            <h3>Title</h1>
+                            <p>Content Preview...</p>
+                            <button>Button</button>
+                            <div class="content-news-article_author">
+                                <a href="#"><img src="" alt=""></a>
+                                <div class="content-news-article__author-details">
+                                    <p><b>Posted by ______</b></p>
+                                    <p>ddth mmmm yyyy</p>
+                                </div>
+                            </div>
+                        </article>
+                        <article class="content-news-article">
+                            <div class="content-news-article_image">
+                                <img src="" alt="">
+                                <p>Label</p>
+                            </div>
+                            <h3>Title</h1>
+                            <p>Content Preview...</p>
+                            <button>Button</button>
+                            <div class="content-news-article_author">
+                                <a href="#"><img src="" alt=""></a>
+                                <div class="content-news-article__author-details">
+                                    <p><b>Posted by ______</b></p>
+                                    <p>ddth mmmm yyyy</p>
+                                </div>
+                            </div>
+                        </article>
+                    </div>
                 </div>
             </div>
             <div class="slideshow" id="clients">
