--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
     
         <aside id="sidebar">
             <div class="container">
-                <button onclick="toggleSidebar()">X</button>
+                <button id="button-toggle" onclick="toggleSidebar()"><div class="icon-home nav-icon"></div></button>
                 <button id="button-contact">CONTACT US</button>
                 <div class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a></div>
                 <iframe src="https://www.youtube-nocookie.com/embed/cS_CPy7YcaA?autoplay=1" width="100%" height="auto" title="Last Surprise -Scramble-" frameborder="0" allowfullscreen></iframe>
@@ -313,50 +313,56 @@
                     <div class="content-news-container">
                         <article class="content-news-article">
                             <div class="content-news-article_image">
-                                <img src="" alt="">
-                                <p>Label</p>
+                                <img src="img/news/case-study-enhancing-cKxz.png" alt="">
+                                <p><a href="#">Case Studies</a></p>
                             </div>
-                            <h3>Title</h1>
-                            <p>Content Preview...</p>
-                            <button>Button</button>
-                            <div class="content-news-article_author">
-                                <a href="#"><img src="" alt=""></a>
-                                <div class="content-news-article__author-details">
-                                    <p><b>Posted by ______</b></p>
-                                    <p>ddth mmmm yyyy</p>
-                                </div>
-                            </div>
-                        </article>
-                        <article class="content-news-article">
-                            <div class="content-news-article_image">
-                                <img src="" alt="">
-                                <p>Label</p>
-                            </div>
-                            <h3>Title</h1>
-                            <p>Content Preview...</p>
-                            <button>Button</button>
-                            <div class="content-news-article_author">
-                                <a href="#"><img src="" alt=""></a>
-                                <div class="content-news-article__author-details">
-                                    <p><b>Posted by ______</b></p>
-                                    <p>ddth mmmm yyyy</p>
-                                </div>
+                            <div class="content-news-article_content">
+                                <h3>Case Study: Enhancing Security and Reducing Costs for Greg Rowe Limited</h3>
+                                    <p>Who Is The Client? Greg Rowe Limited is a leading UK-based tap design and manufacturing company that...</p>
+                                    <button>Read More</button>
+                                    <div class="content-news-article_author">
+                                        <a href="#"><img src="img/news/authors/netmatters-ltd-VXAv.webp" alt=""></a>
+                                        <div class="content-news-article__author-details">
+                                            <p><b>Posted by Netmatters</b></p>
+                                            <p>25th April 2025</p>
+                                        </div>
+                                    </div>
                             </div>
                         </article>
                         <article class="content-news-article">
                             <div class="content-news-article_image">
-                                <img src="" alt="">
-                                <p>Label</p>
+                                <img src="img/news/business-development-executive-oEhA.webp" alt="">
+                                <p><a href="#">Careers</a></p>
                             </div>
-                            <h3>Title</h1>
-                            <p>Content Preview...</p>
-                            <button>Button</button>
-                            <div class="content-news-article_author">
-                                <a href="#"><img src="" alt=""></a>
-                                <div class="content-news-article__author-details">
-                                    <p><b>Posted by ______</b></p>
-                                    <p>ddth mmmm yyyy</p>
-                                </div>
+                            <div class="content-news-article_content">
+                                <h3>Careers Business Development Executive</h3>
+                                    <p>Salary Range £40,000 -£55,000 per annum + Bonus Hours 40 hours per week, Monday – Friday  Location W...</p>
+                                    <button>Read More</button>
+                                    <div class="content-news-article_author">
+                                        <a href="#"><img src="img/news/authors/bethany-shakespeare-F6Iu.webp" alt=""></a>
+                                        <div class="content-news-article__author-details">
+                                            <p><b>Posted by Bethany Shakespeare</b></p>
+                                            <p>22nd April 2025</p>
+                                        </div>
+                                    </div>
+                            </div>
+                        </article>
+                        <article class="content-news-article">
+                            <div class="content-news-article_image">
+                                <img src="img/news/case-study-roys-y83f.png" alt="">
+                                <p><a href="#">Case Studies</a></p>
+                            </div>
+                            <div class="content-news-article_content">
+                                <h3>Case Study: Roys of Wroxham – A Future-Proof Telecoms Solution</h3>
+                                    <p>Who Is The Client? Roys of Wroxham is a long-established independent department store with deep root...</p>
+                                    <button>Read More</button>
+                                    <div class="content-news-article_author">
+                                        <a href="#"><img src="img/news/authors/netmatters-ltd-VXAv.webp" alt=""></a>
+                                        <div class="content-news-article__author-details">
+                                            <p><b>Posted by Netmatters</b></p>
+                                            <p>15th April 2025</p>
+                                        </div>
+                                    </div>
                             </div>
                         </article>
                     </div>
