Started replacing placeholder icons with the final ones

--- a/index.html
+++ b/index.html
@@ -20,17 +20,16 @@
                     <input type="text" name="" id="searchbox" placeholder="Search...">
                     <div class="submit-styles">
                         <input type="submit" id="button-search" value=" ">
-                        <div class="icon-home nav-icon"></div>
+                        <div class="icon-search nav-icon"></div>
                     </div>
-                    <button id="button-nav" onclick="toggleSidebar()"><div class="icon-home nav-icon"></div></button>
+                    <button id="button-nav" class="icon-menu" onclick="toggleSidebar()"><div class="icon-home nav-icon"></div></button>
                 </div>                    
             </div>            
-            <!-- Mobile Search bar div  -->
             <div class="main-searchbar-mobile">
                 <input type="text" name="" id="searchbox" placeholder="Search...">
                 <div class="submit-styles">
                     <input type="submit" id="button-search" value=" ">
-                    <div class="icon-home nav-icon"></div>
+                    <div class="icon-search nav-icon"></div>
                 </div>
             </div>
             <nav class="main-nav">
@@ -132,7 +131,7 @@
     
         <aside id="sidebar">
             <div class="container">
-                <button id="button-toggle" onclick="toggleSidebar()"><div class="icon-home nav-icon"></div></button>
+                <button id="button-toggle" onclick="toggleSidebar()"><div class="icon-menu nav-icon"></div></button>
                 <button id="button-contact">CONTACT US</button>
                 <div class="nav-item" id="sof"><a href="#"><small>BESPOKE</small>SOFTWARE</a></div>
                 <iframe src="https://www.youtube-nocookie.com/embed/cS_CPy7YcaA?autoplay=1" width="100%" height="auto" title="Last Surprise -Scramble-" frameborder="0" allowfullscreen></iframe>
@@ -182,7 +181,7 @@
                     <ul class="content-items">
                         <li>
                             <div id="sof" class="content-item-box major">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-laptop"></div>
                                 <h3>Bespoke Software</h3>
                                 <p>Bespoke software solutions for all your business needs including integrations and reporting.</p>
                                 <button>Read More</button>
@@ -190,7 +189,7 @@
                         </li>
                         <li>
                             <div id="sup" class="content-item-box major">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-display"></div>
                                 <h3>IT Support</h3>
                                 <p>Fully managed IT support and consultancy packages tailored to meet your exact business needs.</p>
                                 <button>Read More</button>
@@ -198,7 +197,7 @@
                         </li>
                         <li>
                             <div id="mar" class="content-item-box major">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-bar-graph"></div>
                                 <h3>Digital Marketing</h3>
                                 <p>Driven brand awareness & ROI through creative digital marketing campaigns.</p>
                                 <button>Read More</button>
@@ -206,7 +205,7 @@
                         </li>
                         <li>
                             <div id="ser" class="content-item-box minor">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-phone"></div>
                                 <h3>Telecoms Services</h3>
                                 <p>Business telephony solutions including mobile & connectivity solutions.</p>
                                 <button>Read More</button>
@@ -214,7 +213,7 @@
                         </li>
                         <li>
                             <div id="des" class="content-item-box minor">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-embed2"></div>
                                 <h3>Web Design</h3>
                                 <p>User-centric design for businesses looking to make a lasting impression.</p>
                                 <button>Read More</button>
@@ -222,7 +221,7 @@
                         </li>
                         <li>
                             <div id="sec" class="content-item-box minor">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-security"></div>
                                 <h3>Cyber Secuirity</h3>
                                 <p>Prevention, testing, consultancy & breach management services.</p>
                                 <button>Read More</button>
@@ -230,7 +229,7 @@
                         </li>
                         <li>
                             <div id="dev" class="content-item-box minor">
-                                <div class="content-item__icon icon-home"></div>
+                                <div class="content-item__icon icon-school"></div>
                                 <h3>Developer Training</h3>
                                 <p>Web design & software training courses designed to secure a job in tech.</p>
                                 <button>Read More</button>
@@ -288,11 +287,11 @@
                         <div class="welcome-section2-content">
                             <h1>What Our Clients Think</h1>
                             <div class="stars">
-                                <div class="star icon-home"></div>
-                                <div class="star icon-home"></div>
-                                <div class="star icon-home"></div>
-                                <div class="star icon-home"></div>
-                                <div class="star icon-home"></div>
+                                <div class="star icon-star-full"></div>
+                                <div class="star icon-star-full"></div>
+                                <div class="star icon-star-full"></div>
+                                <div class="star icon-star-full"></div>
+                                <div class="star icon-star-full"></div>
                             </div>
                             <q>Netmatters stood out from the start. Great guys and very easy to work with. Both the build and digital marketing teams are clearly skilled -they know their stuff! They delivered a website to our (high!) expectations and went over and above to ensure we were satisfied clients - and we are!</q>
                             <p>Eleanor Bishop, Head of Marketing - <a href="#"><b>Ashcroft Partnership LLP</b></a></p>
